# scriptbox

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: audit.yml  ci.yml  release.yml  style.yml
compat/: Dockerfile  README.md  run.sh
compat/idioms/: argv0.sh  argv0_shebang.sh  arrays.sh  background.sh  child.sh  cmdsub.sh  crlf.sh  exec_child.sh  exec_parent.sh  exec_replace.sh  heredoc.sh  large.sh  procsub.sh  selfedit.tmpl  set_euo.sh  source_parent.sh  stdin_read.sh  subshell.sh  trap_exit.sh
src/: cache.rs  checksum.rs  config.rs  frontmatter.rs  interpreter.rs  loader.rs  main.rs  pin.rs  run.rs  shebang.rs  subscripts.rs
tests/: e2e.rs
